# Syntelligence0

./: .flake8  .gitignore  .pre-commit-config.yaml  .pyre_configuration  CONTRIBUTING.md  LICENSE  README.md  generate_project_structure.sh  mypy.ini  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  documentation.yml  test.yml
.pyre/: pyre.stderr
automation/: code_quality_checks.py  data_migration_tool.py  deployment_script.sh
behavior_config/: action_execution.py  action_models.py  mapping_engine.py
config/: database.ini  secrets.ini  settings.py
docs/: api_reference.md  conf.py  system_guide.md
docs/source/: MAKEFILE  conf.py  index.md
document_config/: document_models.py  document_relationships.py  document_storage.py
interface_config/: forms.py  interactions.py  models.py
node_data/: data_transformation.py  data_validation.py  node_data_models.py
node_interactions/: interaction_engine.py  interaction_protocols.py  interaction_types.py
node_management/: node.py  node_attributes.py  node_categories.py  node_types.py  shared.py
reports/: report_generator.py
reports/report_templates/: monthly_summary.html  performance_report.tex
source/: conf.py  index.rst
system_config/: database_scripts.py  environment.py  subsystem_models.py
tests/integration_tests/: node_config_mgmt.feature  test_node_config_mgmt.py  test_system_integration.py
tests/unit_tests/: test_interface_config.py
utils/: data_utils.py  security_utils.py  system_utils.py
