[tool.poetry]
name = "arp-autoarp"
version = "0.1.0"
description = "Next era ERP"
authors = ["Samuel Prime"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.0"
torch = "^2.4.0"
torchvision = "^0.19.0"
torchaudio = "^2.4.0"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-bdd = "^7.2.0"
black = "^24.8.0"
flake8 = "^7.1.1"
mypy = "^1.11.2"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
faker = "^28.1.0"
sphinx = "^8.0.2"
jupyter = "^1.1.1"
pyre-check = "^0.9.22"
furo = "^2024.8.6"
sphinx-autobuild = "^2024.9.3"
recommonmark = "^0.7.1"
sphinx-markdown-tables = "^0.0.17"
myst-parser = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
